--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To-Do List</title>
+    <title>Shopping List</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container" id="container">
-      <h1 class="todo-header">To Do List</h1>
-      <div>
-        <input
-          id="todo-input"
-          class="todo-input"
-          placeholder="Please enter new task"
-        />
-        <button id="input-button" class="input-button">Add</button>
-      </div>
-      <ul id="todo-list" class="todo-list"></ul>
+    <div class="shopping-container">
+      <h1>Shopping List</h1>
+      <input
+        type="text"
+        id="item-input"
+        class="shopping-input"
+        placeholder="Enter a new item"
+      />
+      <button id="add-item" class="shopping-button">Add Item</button>
+      <ul id="item-list" class="shopping-list"></ul>
     </div>
     <script src="task.js"></script>
   </body>
