--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shopping List</title>
+    <title>Contact Book</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="shopping-container">
-      <h1>Shopping List</h1>
+    <div class="contact-container">
+      <h1>Contact Book</h1>
       <input
         type="text"
-        id="item-input"
-        class="shopping-input"
-        placeholder="Enter a new item"
+        id="contact-name"
+        class="contact-input"
+        placeholder="Enter name"
       />
-      <button id="add-item" class="shopping-button">Add Item</button>
-      <ul id="item-list" class="shopping-list"></ul>
+      <input
+        type="text"
+        id="contact-phone"
+        class="contact-input"
+        placeholder="Enter phone number"
+      />
+      <button id="add-contact" class="contact-button">Add Contact</button>
+      <ul id="contact-list" class="contact-list"></ul>
     </div>
     <script src="task.js"></script>
   </body>
